Hopefully fix problem with taking a clan snapshot of a player with a custom title starting with "Level".  Note that correct parsing of the level of any player that has their level as part of their title cannot be guaranteed.
git-svn-id: http://svn.code.sf.net/p/kolmafia/code@6506 b29ace70-8910-0410-8dcc-aa2fc6433167